--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | 3-column preview card component</title>
-</head>
-<body>
-  <div class="container">
-    <div class="wrapper">
-      <div class="box1">
-        <img src="images/icon-sedans.svg" alt="">
-        <h2>Sedans</h2>
-        <p>
-          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-          or on your next road trip.
-        </p>
-        <a href="#">Learn More</a>
-      </div>
-        <div class="box2">
-        <img src="images/icon-suvs.svg" alt="">
-          <h2>SUVs</h2>
-          <p>
-            Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-            and off-road adventures.
-          </p>
-          <a href="#">Learn More</a>
-      </div>
-      <div class="box3">
-        <img src="images/icon-luxury.svg" alt="">
-        <h2>Luxury</h2>
-          <p>
-            Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-            rental and arrive in style.
-          </p>
-          <a href="#">Learn More</a>
-        </div>
-    </div>
-  </div>  
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+		<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/normalize.css">
+		<title>Frontend Mentor | 3-column preview card component</title>
+	</head>
+
+	<body>
+		<main class="wrapper">
+			<div class="wrapper__box">
+				<section class="wrapper__box--1">
+					<picture>
+						<img src="images/icon-sedans.svg" alt="vehicle_image">
+					</picture>
+					<p>Sedans</p>
+					<p>
+						Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+						or on your next road trip.
+					</p>
+					<a href="#">Learn More</a>
+				</section>
+				<section class="wrapper__box--2">
+					<picture>
+						<img src="images/icon-suvs.svg" alt="vehicle_image">
+					</picture>
+					<p>SUVs</p>
+					<p>
+						Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+						and off-road adventures.
+					</p>
+					<a href="#">Learn More</a>
+				</section>
+				<section class="wrapper__box--3">
+					<picture>
+						<img src="images/icon-luxury.svg" alt="vehicle_image">
+					</picture>
+					<p>Luxury</p>
+					<p>
+						Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+						rental and arrive in style.
+					</p>
+					<a href="#">Learn More</a>
+				</section>
+			</div>
+		</main>  
+	</body>
 </html>
