--- a/index.html
+++ b/index.html
@@ -11,41 +11,45 @@
 
 	<body>
 		<main class="wrapper">
-			<div class="wrapper__box">
-				<section class="wrapper__box--1">
+			<section class="wrapper__box">
+
+				<article class="wrapper__box--1">
 					<picture>
-						<img src="images/icon-sedans.svg" alt="vehicle_image">
+						<img src="images/icon-sedans.svg" alt="vehicle_image" style="width: auto;">
 					</picture>
-					<p>Sedans</p>
+					<h2>Sedans</h2>
 					<p>
 						Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
 						or on your next road trip.
 					</p>
 					<a href="#">Learn More</a>
-				</section>
-				<section class="wrapper__box--2">
+				</article>
+
+				<article class="wrapper__box--2">
 					<picture>
-						<img src="images/icon-suvs.svg" alt="vehicle_image">
+						<img src="images/icon-suvs.svg" alt="vehicle_image" style="width: auto;">
 					</picture>
-					<p>SUVs</p>
+					<h2>SUVs</h2>
 					<p>
 						Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
 						and off-road adventures.
 					</p>
 					<a href="#">Learn More</a>
-				</section>
-				<section class="wrapper__box--3">
+				</article>
+
+				<article class="wrapper__box--3">
 					<picture>
-						<img src="images/icon-luxury.svg" alt="vehicle_image">
+						<img src="images/icon-luxury.svg" alt="vehicle_image" style="width: auto;">
 					</picture>
-					<p>Luxury</p>
+					<h2>Luxury</h2>
 					<p>
 						Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
 						rental and arrive in style.
 					</p>
 					<a href="#">Learn More</a>
-				</section>
-			</div>
+				</article>
+
+			</section>
 		</main>  
 	</body>
 </html>
